# Release Information

## 2024

### January
* `2024-01-22 18:01:45` : BATS tests refactored into single file: `./test/00_BCLD-BUILD.bats`
* `2024-01-22 16:05:02` : Removing `test/00_PRE-BUILD.bats` because tests are not portable
* `2024-01-12 16:58:28` : Added `shellcheck` to `BUILD` packages and `./test/BCLD-BATS.sh`
* `2024-01-12 14:27:53` : Added pactl scan before starting the app to detect hidden sinks
* `2024-01-11 13:48:04` : Expand HashGen to include `./.assets` and `./.github`
* `2024-01-10 12:39:20` : Vendorless BCLD released on GitHub
    - BATS modules readded
    - Cleanup up [README.md](./README.md)
* `2024-01-03 16:42:21` : 
    - Replaced `falkon` with `qutebrowser`
    - Unable to disable tabs, only downside
    - Added `Shift + Escape` to `.xbindkeys` for `QuteBrowser`
    - Plymouth English translation

## 2023

### December
* `2023-12-12 15:39:18`: More chroot checks
* `2023-12-11 17:13:44`: 
    - Updated `./BCLD_FLOW.png`
    - Delete `systemd-resolvd.service`
    - Added `BCLD_APP` to the required build ENVs
    - Improvements to checks for required ENVs
    - Removed value outputs for ENV checks as they are not needed
* `2023-12-08 16:12:01`: 
    - Introduce `BCLD_CFG_EDIT` as build variable
    - Allows custom text in `bcld.cfg` during build
    - Packages in `./config/packages/APP` will now only be installed if `./app` does not contain any packages
* `2023-12-08 14:19:46`: 
    - [OAC-770] `ttf-mscorefonts-installer` and `gsfonts-x11` removed from `REQUIRED` (did not fix Pi symbol)
    - [KERNEL PATCH] `6.2.0-36` > `6.2.0-37`
* `2023-12-07 13:02:53`: 
    - System will now immediately poweroff if selected app closes or crashes
    - This prevents RELEASE from reaching a terminal (TTY) if the app crashes unexpectedly
    - [OAC-806] `BCLD_VENDORLESS_URL` renamed to `BCLD_DEFAULT_URL`
* `2023-12-06 15:43:41`: `HashGen` now creates optional hashes and will no longer fail if directories are missing (like `./cert`)