@@ -1,14 +1,14 @@
 6c4c5285db87fdd8c42aa6265b0bbac0  ./.github/workflows/release.yml
 00d7c9f26e2eb5eec4e7f06140be6dea  ./.gitignore
 4a6fa59b1c01aecca6b7504953723f01  ./.gitmodules
-ba437e2eac994399359648caac7c84c8  ./CHANGELOG
+567dabd94331d73c871a600d1fd6209f  ./CHANGELOG
 04aff3cce210e9c2a8f21df593f07b19  ./COPYING
 5f630c45a220e988d7c6cb643575f3a0  ./Docker-builder.sh
 d221c605820660f1d244c6213e28d08b  ./IMG-builder.sh
 f989130a6074ceca51514421f336a6fe  ./ISO-builder.sh
 cc04d3c28306689fde5be96638e22f70  ./LICENSE
 6bbeaad1335d041aa1d5ef5f48d15c65  ./README.md
-77a9103c2abf925fda8dfe8ac8575bdb  ./RepoMan.sh
+1864d2c90a575a8e4012efbdd5e3c406  ./RepoMan.sh
 53712c37e5d406d6e2396d0133c63e0a  ./assets/BCLD_FLOW.png
 b70ef6c6e2ba24acef78d533b2bca185  ./assets/ISO_BUILDER_FLOW.png
 5ee37144e15f8bf49e7f683935a27f15  ./assets/bcld-logo.png
@@ -43,7 +43,7 @@ d5fa17464f6a8520b0fc28a2731b053c  ./config/modprobe/blacklist.conf
 818e728f1804c52e2abb09cbf0fe364c  ./config/openbox/rc.xml
 d93c0ecfa96fe619d9503decf1193dd3  ./config/openbox/rc.xml.debug
 d57cf84974e9a959d64a38710983a18d  ./config/packages/APP
-0b5c8b2c668b76f5ed136cf934027aaa  ./config/packages/BUILD
+fce619269ad6aac662f001bcff4f0416  ./config/packages/BUILD
 374480d37890b60da24eda7c90bf7b57  ./config/packages/DEBUG
 335cd24f955359c232ece20790776c3d  ./config/packages/KERNEL
 dc9ce4b257ebd2d13ef23c9b74d5d197  ./config/packages/NVIDIA
@@ -101,7 +101,7 @@ df6732bf6b392a7cc69200bd58fb31b9  ./script/crosdump_logger.sh
 a0ad3b8dcdd06327c49632ade4f76658  ./script/rsyslogger.sh
 f954697a6f68e7c25e05e75310080794  ./script/startup.sh
 433a2f4f80224f7c115b47a656b7c57c  ./script/usb_logger.sh
-ad2a0f82ff8922c5f6c09bbeacaf3211  ./test/00_BCLD-BUILD.bats
+e5661eb928aee6330f2ef6bc87102f0e  ./test/00_BCLD-BUILD.bats
 cdb9703f21c79faa1eae03f7c28a7cca  ./test/BCLD-BATS.sh
 13fc6ce9dd7d8170534714cd7a3ccc01  ./test/bcld_test.sh
 3c6d9bad67a59baeb81ef905281f3616  ./test/common-setup
@@ -111,4 +111,4 @@ d17592b1867453e7e203d9d13b2251e4  ./tools/DOCKER-install.sh
 853ffb8a5e4bea6c1b108f07157924c0  ./tools/NEXUS-deploy.sh
 0a430cdd84ba79567389d5440f23a3ba  ./tools/bcld-repo-manager/chrepoman.sh
 bc8d6f1036b0463c7f1703414b04f691  ./tools/bcld-repo-manager/generate_release.sh
-2c29eaacba101e914e4bb3521a6eff84  ./tools/bcld-repo-manager/repository_manager.sh
+576027c00e059a42be23df4821ff0040  ./tools/bcld-repo-manager/repository_manager.sh
