@@ -3,6 +3,7 @@
 ## 2024
 
 ### January
+* `2024-01-25 14:21:40` : Added [RepoMan](./RepoMan.sh) dependencies to [BUILD packages](./config/packages/BUILD)
 * `2024-01-22 18:01:45` : BATS tests refactored into single file: `./test/00_BCLD-BUILD.bats`
 * `2024-01-22 16:05:02` : Removing `test/00_PRE-BUILD.bats` because tests are not portable
 * `2024-01-12 16:58:28` : Added `shellcheck` to `BUILD` packages and `./test/BCLD-BATS.sh`
